# auto-modeler

./: .gitignore  LICENSE  MANIFEST.in  Procfile  README.md  env.example  example_pulp_code.py  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: main.py  model_formulator.py  nlp_processor.py  solver_engine.py  validator.py
app/ui/: __init__.py  app.py
app/ui/static/: style.css
app/ui/templates/: index.html
tests/: test_nlp_processor.py
